<resources>
    <string name="app_name">Fifa Gen</string>
    <string name="generate">Generate</string>
    <string name="change_settings"><u>Change Settings</u></string>
    <string name="country">Country</string>
    <string name="home">Home</string>
    <string name="def">DEF</string>
    <string name="mid">MID</string>
    <string name="att">ATT</string>
    <string name="xx">XX</string>
    <string name="league">League</string>
    <string name="away">Away</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login"><u>Already have an account? Login</u></string>
    <string name="don_t_have_an_account_register"><u>Don\'t have an account? Register</u></string>
    <string name="profile">Profile</string>
    <string name="forgot_password_recover_here"><u>Forgot Password? Recover here</u></string>
    <string name="users">Users</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="person_name">Person Name</string>
    <string name="person_email">Person Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="start_typing">Start Typing</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="add_name">Add Name</string>
    <string name="delivered">Delivered</string>
    <string name="seen">Seen</string>
    <string name="my_message">My Message</string>
    <string name="_01_02_2020_19_39pm">01/02/2020 19:39PM</string>
    <string name="their_message">Their Message</string>
    <string name="chat_list">Chat List</string>
    <string name="online">online</string>
    <string name="search">Search</string>
    <string name="typing">typing…</string>
    <string name="save">Save</string>
    <string name="away_score">Away Score</string>
    <string name="away_player">Away Player</string>
    <string name="home_score">Home Score</string>
    <string name="home_player">Home Player</string>
    <string name="away_team">Away Team</string>
    <string name="home_team">Home Team</string>
    <string name="generate_match">Generate Match</string>
    <string name="save_match_result">Save Match Result</string>
    <string name="login_here_to_save_matches_against_friends"><u>Login here to save matches against friends!</u></string>
    <string name="date">Date</string>
    <string name="x">X</string>
    <string name="score">-</string>
    <string name="save_match">Save Match</string>
    <string name="notifications">Notifications</string>
</resources>
