<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@android:color/white"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeBadgeId"
                android:layout_width="64dp"
                android:layout_height="64dp"
                tools:srcCompat="@drawable/badge_1"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/homeTeamId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/home_team"/>

            <TextView
                android:id="@+id/homePlayerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_player"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timestampId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/homeScoreId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:text="@string/x"/>

                <TextView
                    android:id="@+id/scoreId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:text="@string/score"/>

                <TextView
                    android:id="@+id/awayScoreId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:text="@string/x"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/awayBadgeId"
                android:layout_width="64dp"
                android:layout_height="64dp"
                tools:srcCompat="@drawable/badge_10"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/awayTeamId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/away_team"/>

            <TextView
                android:id="@+id/awayPlayerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/away_player"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>