<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/avatarId"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default"
            app:c_background_color="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/nameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarId"
        android:layout_above="@id/chatLayoutId" />

    <LinearLayout
        android:id="@+id/chatLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/start_typing"
            android:padding="15dp" />

        <ImageButton
            android:id="@+id/sendId"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</RelativeLayout>